@@ -738,6 +738,8 @@ public interface PhyStats extends CMCommon, Modifiable
 		CAN_SEE_LAW("@LAW"),
 		IS_DECK_ROOM("@DECK_ROOM"),
 		IS_FLOATING("@FLOATING"),
+		IS_OFFICER("#OFFICER"),
+		IS_JUDGE("#JUDGE"),
 		SUPPRESS_WEATHER("-ANTIWEATHER"),
 		SEEMS_GOOD("#GOOD"),
 		SEEMS_EVIL("#EVIL"),
@@ -745,8 +747,11 @@ public interface PhyStats extends CMCommon, Modifiable
 		SEEMS_LAWFUL("#LAW"),
 		SEEMS_CHAOTIC("#CHAOS"),
 		SEEMS_MODERATE("#MODERATE"),
+		SUPPRESS_MOOD("-MOOD"),
+		SUPPRESS_DRUNKENNESS("-DRUNKEN"),
 		SUPPRESS_ALL("-ALL"),
 		SUPPRESS_MOST("-MOST"),
+		SUPPRESS_OFFICIALDOM("-OFFICER"),
 		SUPPRESS_AMBIANCE_EVIL("-EVIL"),
 		SUPPRESS_AMBIANCE_GOOD("-GOOD"),
 		SUPPRESS_AMBIANCE_INVISIBLE("-INVISIBLE"),
