@@ -4758,6 +4758,12 @@ see the thief.  This skill is almost always successful if the target is \
 incapacitated (asleep, knocked out, bound, etc).  This skill has a small chance \
 of depleting the item.
 
+SKILL_STOICISM=STOICISM
+STOICISM=<ABILITY>\
+Example  : \n\r\
+Having extreme discipline and control over his or her emotions, the character becomes \
+immune to many mood altering expressions and effects. 
+
 FIGHTER_STONEBODY=STONE_BODY
 STONEBODY=STONE_BODY
 STONE_BODY=<ABILITY>\
