@@ -29,6 +29,7 @@
  28. Temporary skills now show up in the SKILLS/SPELLS/etc command as dark grey.
  29. You can no longer cast speak or cast verbal spells unless you can breathe where you are.
  30. ALIAS now supports a copy command.
+ 31. New skill: Stoicism
 
 # Build 5.10.2 Release 4/28/2023
   *  DATABASE CHANGED! (Enlarged CMDATE, and new expiration date added to CMJRNL table)
